--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>katharsis-core</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.0.1-FLIXSTER</version>
     <packaging>jar</packaging>
 
     <name>katharsis-core</name>
